--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@babel/core": "^7.26.0",
+    "@types/react-router-dom": "^5.3.3",
     "lucide-react": "^0.344.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^7.0.0"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
