--- a/package.json
+++ b/package.json
@@ -11,18 +11,24 @@
   },
   "dependencies": {
     "@babel/core": "^7.26.0",
-    "@types/react-router-dom": "^5.3.3",
+    "@rainbow-me/rainbowkit": "^2.2.0",
+    "@tanstack/react-query": "^5.61.0",
+    "@wagmi/core": "^2.15.0",
+    "ethers": "^6.13.4",
     "lucide-react": "^0.344.0",
     "next": "^15.0.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.0"
+    "react-router-dom": "^7.0.1",
+    "viem": "^2.21.49",
+    "wagmi": "^2.13.0"
   },
   "devDependencies": {
     "@types/babel__core": "^7.20.5",
     "@types/node": "^22.9.1",
     "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.0",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react": "^4.2.1",
